--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,8 +18,8 @@ spring:
     mail:
         host: sandbox.smtp.mailtrap.io
         port: 587
-        username: f68a70766549cb
-        password: 62bcdaa4372af9
+        username: ****
+        password: ****
         properties:
             mail:
                 smtp:
@@ -29,3 +29,8 @@ spring:
     rabbitmq:
         addresses: amqps://kkuqfjon:dKkuMliNZi-PLdClhSqqrBOMNpqPwyjD@moose.rmq.cloudamqp.com/kkuqfjon
         queue: ms.email
+
+logging:
+    level:
+        root: INFO
+        com.ms.email: INFO
