specify path for log4j2 cofig

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,4 @@ spring:
         queue: ms.email
 
 logging:
-    level:
-        root: INFO
-        com.ms.email: INFO
+    config: classpath:log4j2.xml
