rmv value from rabbitmq address

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
                     starttls:
                         enable: true
     rabbitmq:
-        addresses: amqps://kkuqfjon:dKkuMliNZi-PLdClhSqqrBOMNpqPwyjD@moose.rmq.cloudamqp.com/kkuqfjon
+        addresses: ****
         queue: ms.email
 
 logging:
